update to 1.18.2 structures + loot coconuts randomly drop